--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>blawg</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="UTF-8">
+    <title>blawg</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@500&display=swap" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
   </head>
   <body>
-    <p>buh</p>
+    <div class="source-code-pro-gyat window">
+        <div class="bar">
+            <p class="left">sulthn.github.io</p>
+        </div>
+        <hr>
+        <div class="body">
+            <p>haiiiiii!!!!</p>
+        </div>
+        <div class="bar">
+            <a href="https://github.com/sulthn" target="_blank">github profile</a>
+            <a href="https://maps.app.goo.gl/xSzFu98zFqYr6FtSA" target="_blank">my REAL home address</a>
+            <a href="https://github.com/sulthn/Engie" target="_blank">Engie</a>
+        </div>
+    </div>
   </body>
 </html>
